--- a/package.json
+++ b/package.json
@@ -62,8 +62,7 @@
     "zod": "^3.25.76",
     "@rainbow-me/rainbowkit": "^2.0.0",
     "wagmi": "^2.0.0",
-    "viem": "^2.0.0",
-    "@tanstack/react-query": "^5.83.0"
+    "viem": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
